# Vulkan-Renderer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  buildAndRun.bat  buildAndRun.sh
include/: Renderer.hpp  VkRenderer.hpp  app.hpp  logger.hpp  renderer.hpp  utilities.hpp
shaders/: compile.sh
shaders/glsl/: shader.frag  shader.vert
src/: Renderer.cpp  VkRenderer.cpp  app.cpp  logger.cpp  main.cpp  renderer.cpp  utilities.cpp
